# podium

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FLAGSHIP_EVENT_GUIDE.md  README.md  dev.sh  docker-compose.yaml  docker-compose.yml  n_plus_one_issues.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  review-checklist.md  todo.md
.cursor/rules/: ai-driven-tests.mdc  daisyui.mdc
.github/instructions/: daisyui.md  pydantic.md
.github/workflows/: deploy-orchard.yaml  e2e-tests.yaml  publish-docker.yaml
agent-plans/: official-events-only.md
agent-plans/postgres-migration/: overview.md  technical.md
backend/: .dockerignore  .env  .env.public  .gitignore  CACHING.md  Dockerfile  alembic.ini  docker-compose.yaml  migrate_daydream_events.py  poetry.dev.sh  pyproject.toml  regenerate_models.py  settings.toml
backend/event_migrations/: README.md  migrate_events_template.py
backend/loadtest/: README.md  locustfile.py  pre_create_test_users.py  run_tests.sh
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 28f961df26a5_remove_airtable_id_and_event_join_code.py  2b44c8c9a626_make_event_join_code_nullable.py  434e824c2c24_drop_points_column.py  68760cdd30c1_change_url_fields_to_text.py  86972a653c14_remove_cached_auto_quality.py  a1b2c3d4e5f6_add_event_phase_drop_votable_leaderboard.py  b2c3d4e5f6a7_validation_system_superadmin.py  c3d4e5f6a7b8_add_require_address_to_events.py  d4e5f6a7b8c9_replace_require_address_with_require_ysws_pii.py  e10bb6a39187_add_surrogate_pk_to_link_tables.py  e5f6a7b8c9d0_backfill_project_image_url.py  eb4f2bdf228a_initial_schema.py
backend/podium/: __init__.py  __main__.py  config.py  constants.py  limiter.py  main.py  middleware.py  quality.py
backend/podium/cache/: __init__.py  airtable_automation.js  airtable_automation_template.js  auto_config.py  client.py  generate_automation_scripts.py  models.py  operations.py  specs.py  sweep.py
backend/podium/db/: __init__.py  db.py  event.py  migration.py  project.py  referral.py  user.py  vote.py
backend/podium/db/_airtable_deprecated/: __init__.py  db.py
backend/podium/db/postgres/: __init__.py  base.py  event.py  links.py  project.py  queries.py  referral.py  user.py  vote.py
backend/podium/quality/: quality.py
backend/podium/routers/: admin.py  auth.py  cache_invalidate.py  events.py  projects.py  quality.py  superadmin.py  test_routes.py  users.py
backend/podium/validators/: __init__.py  base.py  email.py  github.py  itch.py  itch_police.py  turnstile.py
backend/podium/validators/custom/: __init__.py  sleepover.py
backend/quality/: __main__.py  analyze_correctness.py  models.py  quality.py  run_quality_checks.py
backend/scripts/: cleanup_test_data.py  list_test_events.py  manage.py  manage_events.py  migrate_from_airtable.py  seed_debug_data.py
backend/test/: README.md  __init__.py  browser.py  config.py  conftest.py  test_admin.py  test_events.py  test_login.py  test_projects.py  test_user.py  utils.py
backend/test/ai_tests/: README.md  __init__.py  browser.py  config.py  conftest.py  test_admin.py  test_events.py  test_projects.py  test_user.py  utils.py
backend/test/stress/: README.md  auth_utils.py  cleanup.py  client.py  config.py  main.py  regenerate_graphs.py  reporting.py  stress_test_report.json
backups/: README.md
docs/: architecture.md  database.md  local-dev.md  new-series-and-theming.md  nocodb.md  rate-limiting.md  review-checklist.md  testing.md
docs/migrations/: README.md  airtable-id-removal.md  airtable-to-postgres.md
frontend/: .env  .env.development  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  run-e2e-tests.sh  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/: app.css  app.html  (+4 more)
gateway/: Dockerfile  index.js  package.json
mathesar/: .env.example  Dockerfile  Dockerfile.init  Dockerfile.postgres  README.md  VIEWS.md  bootstrap.py  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint-doppler.sh  entrypoint.sh
mathesar-local-dev/: Dockerfile  README.md  VIEWS.md  bootstrap.py  docker-compose.yaml  docker-entrypoint-doppler.sh  entrypoint.sh
scripts/: backup-db.sh  reset-local-db.sh  reset-migrate.sh  restore-db.sh  run-e2e-act.sh
(+191 files in other folders)
