[project]
name = "podium"
version = "0.1.0"
description = ""
authors = [
    {name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.5,<0.116.0)",
    "uvicorn[standard] (>=0.32.1,<0.33.0)",
    "pyairtable (>=3.0.0,<4.0.0)",
    "dynaconf (>=3.2.6,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)",
    "sentry-sdk[fastapi] (>=2.22.0,<3.0.0)",
    # "playwright (>=1.51.0,<2.0.0)",
    # "browser-use @ git+https://github.com/browser-use/browser-use.git@main",
    "httpx (>=0.28.1,<0.29.0)",
    "browser-use (>=0.1.41,<0.2.0)",
    "steel-sdk (>=0.1.0,<0.2.0)"
]

[project.optional-dependencies]
dev = [
    "aiosmtpd (>=1.4.6,<2.0.0)",
    "ruff (>=0.8.1,<1.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select= ["FIX002"]