[project]
name = "podium"
version = "0.1.0"
description = ""
authors = [
    {name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.5,<0.116.0)",
    "uvicorn[standard] (>=0.32.1,<0.33.0)",
    "pyairtable (>=3.0.0,<4.0.0)",
    "dynaconf (>=3.2.6,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)",
    "sentry-sdk[fastapi] (>=2.22.0,<3.0.0)",
    # "playwright (>=1.51.0,<2.0.0)",
    # "browser-use @ git+https://github.com/browser-use/browser-use.git@main",
    "httpx (>=0.28.1,<0.29.0)",
    "browser-use (>=0.5.4,<0.6.0)",
    "steel-sdk (>=0.1.0,<0.2.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.4,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-google-genai (>=2.1.7,<3.0.0)"
]

[project.optional-dependencies]
# poetry install --extras "dev"
dev = [
    "aiosmtpd (>=1.4.6,<2.0.0)",
    "ruff (>=0.8.1,<1.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
podium = "podium.__main__:main"
quality = "quality.__main__:cmd"

[tool.poetry]
# Needed for Poetry to find both packages
packages = [
    { include = "podium" },
    { include = "quality" }
]



[tool.ruff]
lint.extend-select= ["FIX002"]